@@ -41,19 +41,6 @@ void    moport_manager_rt_pull_ending(  moport_manager*,
                                         bbt_t nph,
                                         evport* grid_intersort);
 
-
-/*  moport_manager_rt_play_new_and_output processes incoming note events
- *  and outputs note-on events to JACK.
- *  returns non-zero if any notes begin _and_ finish in current cycle.
-int     moport_manager_rt_play_new_and_output(  moport_manager*,
-                                                bbt_t ph,
-                                                bbt_t nph,
-                                                jack_nframes_t nframes,
-                                                double frames_per_tick );
- */
-
-void    moport_manager_rt_process_new(moport_manager*, bbt_t ph, bbt_t nph);
-
 void    moport_manager_rt_pull_playing_and_empty(   moport_manager*,
                                                     bbt_t ph, bbt_t nph,
                                                     evport* grid_intersort);
